base/004-core-crud/fuse-004-core-crud-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  creationTimestamp: ~
  labels: 
    app: core-crud
  name: core-crud
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: core-crud
  strategy: {}
  template: 
    metadata: 
      creationTimestamp: ~
      labels: 
        app: core-crud
    spec: 
      containers: 
        - 
          securityContext:
            privileged: false
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: "docker.prospecta.com/prospecta/mdo-core-crud:development"
          name: core-crud
          ports:
            - name: spring-port
              containerPort: 8080
              protocol: TCP
            - name: grpc-port
              containerPort: 10000
              protocol: TCP
          resources: {}
      securityContext: {}
      imagePullSecrets:
        - name: nexus-image-pull
---
